--- a/2017-Fall/17-11-1.md
+++ b/2017-Fall/17-11-1.md
@@ -1,7 +1,7 @@
 # Tasks to finish before the end of the semester
 1. Permissions: There's a base
     - Back End
-        - imp
+        - implemented
     - Front
         - Add Permissions
         - View Permissions
@@ -10,20 +10,24 @@
         - Frontend is done?
             - there's a descriptive issue
             - spons: explains the rewards, then the teir systems
-        - back end is ehhhhh
+        - back end is getting there
             - we'll have to figure that out down the line
         - NOTE: Sponsore ship teirs!
             - there are teirs, 5 of them
             - they can pay for t-shirt
             - pay for cybor boot camps
+            - etc.
 3. Major Events
         - the front end is already implemented
         - we need to implement the back end
             - we want as little boolean values in our events as
-            possible this is so that we can't 
+            possible this is so that we can't
 
 # commit messages w/ Kevin
-
-
+- Adhere to [this](https://chris.beams.io/posts/git-commit/).
+- We will be using the imperative mood for the first line of a commit
+    message.
+    - There have been compelling arguments by Clay to allow past tense
+    in commit logs.
 # Mozilla workshop briefing (Nov. 8)
 
